--- a/src/components/UserList/User.module.css
+++ b/src/components/UserList/User.module.css
@@ -2,8 +2,29 @@
   border: 1px solid #000;
   padding: 0.5rem;
   font-size: 1.2rem;
+  display: flex;
+  align-items: center;
 }
 
 .user:not(:last-child) {
   margin-bottom: 2rem;
+}
+
+.delete {
+  margin-left: auto;
+  border: 1px solid red;
+  border-radius: 50%;
+  padding: 0.5rem;
+  height: 2rem;
+  width: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(170, 13, 13);
+  transition: background 250ms ease;
+  cursor: pointer;
+}
+
+.delete:hover {
+  background-color: pink;
 }
